--- a/Flask_Applications/2.Rendering_templates/Package_based_Application/templates/hello.html
+++ b/Flask_Applications/2.Rendering_templates/Package_based_Application/templates/hello.html
@@ -1,3 +1,5 @@
+<!-- app/templates/hello.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +8,8 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>Hello, {{ person if person else 'Stranger' }}!</h1>
-    <p>Welcome to the Flask app.</p>
+    <h1>Hello, {{ person if person else 'World' }}!</h1>
+    <p>Welcome to the simple Flask app.</p>
+    <p><a href="/">Back to Index</a></p>
 </body>
 </html>
