--- a/Flask_Applications/19.Flas_Blog_Mysql/templates/index.html
+++ b/Flask_Applications/19.Flas_Blog_Mysql/templates/index.html
@@ -1,12 +1,20 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
+{% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Welcome to the Flask Blog</h1>
-{% for post in posts %}
-    <div class="post">
-        <h2><a href="{{ url_for('view_post', post_id=post.id) }}">{{ post.title }}</a></h2>
-        <p>{{ post.date_posted.strftime('%Y-%m-%d %H:%M') }}</p>
-        <p>{{ post.content[:100] }}...</p>
-    </div>
-{% endfor %}
+    <h1 class="my-4">All Posts</h1>
+    
+    {% if posts %}
+        <div class="list-group">
+            {% for post in posts %}
+                <a href="{{ url_for('view_post', post_id=post.id) }}" class="list-group-item list-group-item-action">
+                    <h4>{{ post.title }}</h4>
+                    <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d %H:%M') }}</small>
+                </a>
+            {% endfor %}
+        </div>
+    {% else %}
+        <p class="text-muted">No posts to display.</p>
+    {% endif %}
 {% endblock %}
